# wrangle_pypes

./: .gitignore  Pipfile  README.md  setup.cfg
wrangle_pypes/: __init__.py  pipeline.py  transformations.py
wrangle_pypes/async/: pipeline.py  transformations.py
