[metadata]
name = wrangle_pypes
version = 0.2
description = Easy, model based data wrangling.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tim Fischer
author_email = tim.fischer98@hotmail.com
url = https://github.com/tim-fi/wrangle_pypes
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = wrangle_pypes